# multichat-ollama

./: Cargo.toml
example/: config.toml
src/: config.rs  handle_mc_update.rs  handle_ollama_gen.rs  main.rs  ollama_api.rs  room_state.rs
systemd/: multichat-ollama.service
